--- a/LyapDraft.tex
+++ b/LyapDraft.tex
@@ -129,7 +129,7 @@ where $\X \subseteq \R^d$ is a closed convex set and $f \colon \X \to \R$ is a c
 % We primarily focus on the case $\X = \R^d$ unless explicitly noted otherwise. 
 %We also assume $f$ has a unique minimizer, $x^* \in \X$, satisfying the optimality condition $\nabla f(x^*) = 0$. 
 We use the standard Euclidean norm $\|x\| = \langle x,x \rangle^{1/2}$ throughout.
-We consider the general non-Euclidean setting in which the space $\X$ is endowed with a distance-generating function $h \colon \X \to \R$ that is convex and essentially smooth (i.e. $h$ is continuously differentiable in $\X$, and $\|\nabla h(x)\|_* \to \infty$ as $\|x\| \to \infty$). The function $h$ can also be used to define an alternative measure of distance in $\X$ via its Bregman divergence:
+We consider the general non-Euclidean setting in which the space $\X$ is endowed with a distance-generating function $h \colon \X \to \R$ that is convex and essentially smooth (i.e. $h$ is continuously differentiable in $\X$, and $\|\nabla h(x)\|_* \to \infty$ as $\|x\| \to \infty$). The function $h$ can be used to define a measure of distance in $\X$ via its Bregman divergence:
 \begin{align*}
 D_h(y,x) = h(y) - h(x) - \langle \nabla h(x), y-x \rangle,
 \end{align*}
@@ -140,48 +140,46 @@ We denote a discrete-time sequence in lower case, e.g., $x_k$ with $k \ge 0$ an 
 
 
 \paragraph{Momentum Methods}
-The intuition for solving problem~\eqref{eq:main-problem} with momentum methods comes from looking at optimization algorithms as discrete-time approximations to ODEs. In particular, the second order ODE:
+The intuition for solving problem~\eqref{eq:main-problem} with momentum methods comes from viewing optimization algorithms as discrete-time approximations to ODEs. In particular, the second-order ODE:
  \begin{align}\label{eq:heavy-ball-ode}
  m \frac{d^2x}{dt^2}& = - \nabla f(x) - m \gamma \frac{dx}{dt}
  \end{align}
-corresponds to the equations of motion of an object with mass $m$ in the presence of  friction or viscosity as well as a potential $f$.  Note that the fixed points of such dynamics are those where the gradient of $f$ vanishes.   The trajectories of this dynamical systems will tend to continue to move in the direction they were moving before, analogous to how heavier objects move down hill faster than light objects in the presence of friction.  In the limit that the mass goes to zero, where $\gamma \propto 1/m$, we recover the gradient flow equation, which is the continuous time limit of gradient descent~\cite{Acceleration}.  Thus, the mass term here serves to \emph{accelerate} the progress towards the bottom of the well. 
+corresponds to the equations of motion of an object with mass $m$ in the presence of  friction or viscosity as well as a potential $f$.  Note that the fixed points of such dynamics are those where the gradient of $f$ vanishes.   The trajectories of this dynamical system will tend to have directions of motion that persist over time.  In the limit as the mass goes to zero, and letting $\gamma \propto 1/m$, we recover a gradient-flow equation, which is the continuous-time limit of gradient descent~\cite{Acceleration}.  Thus, the mass term here serves to \emph{accelerate} the progress towards the bottom of the well. 
 
-In seminal work, Polyak proposed the Heavy Ball method for optimization which amounted to applying the Euler method to the dynamical system~\eqref{eq:heavy-ball-ode}.  Polyak was able to show \emph{local convergence} of this method, but was unable to prove global convergence.  Moreover, Polyak's local convergence required the assumption that $f$ was strongly convex in the neighborhood of the associated stationary point.
+In seminal work, Polyak defined and analyzed the Heavy Ball method as an application of Euler's method to the dynamical system~\eqref{eq:heavy-ball-ode}.  He was able to show \emph{local convergence} of this method, but was unable to prove global convergence.  Moreover, his local convergence result required the assumption that $f$ is strongly convex in the neighborhood of the associated stationary point.
 
-Until recently, this ODE perspective on optimization algorithms was largely abandoned in favor of Nesterov's estimate sequence framework.  However, there has been a recent resurgence in interest in ODE based analyses.  Su, Boyd and Cand\`es~\cite{SuBoydCandes14}, showed that the continuous-time limit of Nesterov's accelerated gradient descent method corresponds to the following second-order ODE, 
+Until recently, this ODE perspective on optimization algorithms was largely abandoned in favor of Nesterov's estimate sequence framework.  However, there has been a recent resurgence in interest in ODE-based analyses.  Su, Boyd and Cand\`es~\cite{SuBoydCandes14}, showed that the continuous-time limit of Nesterov's accelerated gradient descent method corresponds to the following second-order ODE, 
  \begin{equation}\label{Eq:SuBoydCandes}
  \ddot X_t + \frac{r}{t} \dot X_t + \nabla f(X_t) = 0,\,\,\,\,r \geq 3.
  \end{equation}
-This is similar to~\eqref{eq:heavy-ball-ode} but has a time-dependent damping term $\gamma_t = r\log t$.  Another particularly elegant aspect of the analysis was the introduction of a {\em Lyapunov function} which can be used to show a $O(1/t^2)$ convergence rate for the continuous time dynamics. This matches the $O(1/\epsilon k^2)$ convergence rate of accelerated gradient descent, given the discretization chooses time-step $t= \sqrt\epsilon k$. Thus, the convergence rate is maintained passing from continuous-time to discrete-time. Two things remain unclear from their analysis however;  they introduce an additional sequence $\{y_k\}_{k=1}^\infty$ while discretizing the ODE~\cite[Sec 2]{Acceleration},  which does not correspond to a straightforward discretization technique; and they do not demonstrate what connection -- if any --   there is between the Lypaunov argument used to analyze the continuous-time dynamics and the technique of estimate sequences used to analyze the discrete-time algorithm. 
+This is similar to~\eqref{eq:heavy-ball-ode} but has a time-dependent damping term $\gamma_t = r\log t$.  They also established a convergence rate of $O(1/t^2)$ for this continuous-time system via a Lyapunov function argument. This matches the $O(1/\epsilon k^2)$ convergence rate of accelerated gradient descent, given the discretization $t= \sqrt\epsilon k$. Thus, the convergence rate is maintained in passing from continuous time to discrete time. Two things remain unclear from their analysis however:  they introduce an additional sequence $\{y_k\}_{k=1}^\infty$ while discretizing the ODE~\cite[Sec 2]{Acceleration},  which does not correspond to a straightforward discretization technique; and they do not demonstrate what connection---if any---there is between the Lypaunov argument used to analyze the continuous-time dynamics and the technique of estimate sequences used to analyze the discrete-time algorithm. 
 
-Krichene, Bartlett and Bayen~\cite{Krichene15} derive a modified accelerated mirror descent algorithm using a ``discretized'' Lyapunov function. However, their proof was for a slightly modified algorithm than the algorithm which appeared in Nesterov's non-Euclidean extension~\cite{Nesterov05}. In particular, their analysis entailed an additional smoothness assumption which is not necessary for the original algorithm~\cite{Nesterov05}, or the original proof technique using estimate sequences.\footnote{In particular, they assume $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y) \leq \frac{L}{2}\|x-y\|^2$%, so that for all intensive purposes, their setting is given by the norm
-. This additional assumption greatly simplifies the proof. However, only the assumption of an upper-bound is needed for the most general form of accelerated methods is that $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y)$.} 
+Krichene, Bartlett and Bayen~\cite{Krichene15} derived a modified accelerated mirror descent algorithm using a ``discretized'' Lyapunov function. However, their proof targeted a different algorithm than the algorithm in Nesterov's original work~\cite{Nesterov05}. In particular, their analysis entailed an additional smoothness assumption which is not necessary for the original algorithm~\cite{Nesterov05}, or for the original proof technique using estimate sequences.\footnote{In particular, they assume $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y) \leq \frac{L}{2}\|x-y\|^2$%, so that for all intensive purposes, their setting is given by the norm
+. This additional assumption greatly simplifies the proof. However, only the assumption of an upper bound is needed for the most general form of accelerated methods is that $\frac{\ell }{2} \|x-y\|^2 \leq  D_h(x,y)$.} See also Nemirovski and Yudin's original work~\cite{NemirovskiiYudin} for a continuous-time perspective on mirror descent and a Lyapunov analysis of convergence.
 
- Wibisono, Wilson, and Jordan~\cite{Acceleration} followed up on the work of Su, Boyd and Candes~\cite{SuBoydCandes14}, introducing a class of dynamical systems whose discretizations give rise to a family of general accelerated gradient algorithms. They showed that many accelerated methods can be viewed as a discretization of the following second-order ODE,
+Wibisono, Wilson, and Jordan~\cite{Acceleration} introduced a class of dynamical systems whose discretizations give rise to a general family of accelerated gradient algorithms, including gradient descent and mirror descent. These algorithms are obtained as a discretization of the following second-order ODE:
  \begin{align} \label{Eq:ELBreg} 
-\frac{d}{dt} \nabla h(X_t + e^{-\alpha_t} \dot X_t) = -e^{\alpha_t+\beta_t} \nabla f(X_t)\,.
+\frac{d}{dt} \nabla h(X_t + e^{-\alpha_t} \dot X_t) = -e^{\alpha_t+\beta_t} \nabla f(X_t)\,,
 \end{align}
-Here $h$ is a strongly convex function associated with the geometry of the space.  In the case where $\alpha_t=-\log m$, and $\beta_t = \log m$,  the continuous time limit $m \rightarrow 0$ of this ODE recovers the mirror descent dynamic~\cite[(78)]{Acceleration}, with $h$ playing the role of the distance generating function.  Indeed, the original motivation for mirror descent by Nemirovski and Yudin was from this continuous perspective, and they demonstrated a Lyapunov argument for the convergence of the continuous time dynamics (see Section 3.1 of Nemirovski and Yudin~\cite{NemirovskiiYudin}).
+where $h$ is a strongly convex function associated with the geometry of the space and where $\alpha_t$ and $\beta_t$ are smooth functions of time.  In the case where $\alpha_t=-\log m$, and $\beta_t = \log m$,  the continuous-time limit $m \rightarrow 0$ of this ODE recovers the mirror descent dynamics~\cite[(78)]{Acceleration}, with $h$ playing the role of the distance-generating function.  Indeed, the original motivation for mirror descent by Nemirovski and Yudin was from this continuous perspective, and they demonstrated a Lyapunov argument for the convergence of the continuous time dynamics (see Section 3.1 of Nemirovski and Yudin~\cite{NemirovskiiYudin}).
 
-In order to have stable dynamics, the functions $\alpha_t$, $\beta_t$, and $\gamma_t$ must satisfy the necessary conditions
+Wibisono \emph{et al.}~\cite{Acceleration} imposed the following conditions on the time-scale functions $\alpha_t$, $\beta_t$, and $\gamma_t$:
 \begin{subequations}\label{Eq:IdeSca}
 \begin{align}
 \dot \beta_t \,&\leq\, e^{\alpha_t}   \label{Eq:IdeScaBet} \\
-\dot \gamma_t \,&=\, e^{\alpha_t}  \label{Eq:IdeScaGam}.
+\dot \gamma_t \,&=\, e^{\alpha_t}  \label{Eq:IdeScaGam},
 \end{align}
 \end{subequations}
-These conditions were dubbed the~\emph{ideal scaling}, and they will play a predominant role in the present work.  Wibosono {\em et al.}~\cite{Acceleration} also require that  $f$ and $h$ be differentiable and convex, and that $h$ be strictly convex. Under the ideal scaling, it was demonstrated that the momentum dynamic~\eqref{Eq:ELBreg} is the Euler-Lagrange equation (stationary condition) of a functional called the {\em Bregman Lagrangian}. This means that the family of accelerated gradient dynamics -- like the gradient flows which generate gradient methods -- can be understood as being generated from a {\em variational principal}. They also generalize the Lyapunov function of Su {\em et al.}~\cite{SuBoydCandes14} and use it to show that the family of momentum dynamics~\eqref{Eq:ELBreg} obtain the convergence rate $O(e^{-\beta_t})$. However, they did not provide a Lyapunov analysis of the discrete-time algorithm, nor did they make explicit the connection between the Lyapunov function and the estimate sequence technique. We address some of these issues in the present work, providing a framework that generalizes these earlier results.
+refering to these conditions as~\emph{ideal scaling}, and showing their necessity for achieving accelerated rates. These conditions will also play an important role in the present work.  Wibosono {\em et al.}~\cite{Acceleration} also require that  $f$ and $h$ be differentiable and convex, and that $h$ be strictly convex. Under the ideal scaling, they demonstrated that the momentum ODE~\eqref{Eq:ELBreg} is the Euler-Lagrange equation for a functional that they referred to as the{\em Bregman Lagrangian}. This means that the family of accelerated gradient dynamics---like the gradient flows which generate gradient methods---can be understood as being generated from a {\em variational principle}. They also presented a Lyapunov function to demonstrate a convergence rate of $O(e^{-\beta_t})$ for the momentum dynamics~\eqref{Eq:ELBreg}. However, they did not provide a Lyapunov analysis of the discrete-time algorithm, nor did they make explicit the connection between the Lyapunov function and the estimate sequence technique. 
 
 \section{Rate-generating Lyapunov Functions}
-Lyapunov's method~\cite{Lyapunov} is based on the idea of constructing a positive definite quantity $\E: \X \rightarrow \R$ --  called a {\em Lyapunov function} -- which decreases along the trajectories of the dynamical system $\dot X_t = v(X_t)$. Using equations, this condition is written,
+Lyapunov's method~\cite{Lyapunov} is based on the idea of constructing a positive definite quantity $\E: \X \rightarrow \R$ which decreases along the trajectories of the dynamical system $\dot X_t = v(X_t)$:
 \begin{equation*}
 \dot \E(X_t) =\langle \nabla \E(X_t), v(X_t)\rangle < 0.
 \end{equation*}
-The existence of a Lyapunov function guarantees that the dynamical system converges: if the function is positive yet strictly decreasing along all trajectories, then the dynamical system must eventually approach a region where $\E(X)=0$.  If this region coincides with the stationary points of the dynamics, then all trajectories must converge to a stationary point.  The technique of Lyapunov -- of finding a function which decreases with each iteration -- is a ubiquitous tool in algorithm analysis~\cite{CLR}.   An additional advantage of exhibiting a Lyapunov function is that enables us to understand properties of entire trajectories of the dynamical system we are analyzing (e.g boundedness, stability, etc.).  
+The existence of such a \emph{Lyapunov function} guarantees that the dynamical system converges: if the function is positive yet strictly decreasing along all trajectories, then the dynamical system must eventually approach a region where $\E(X)$ is minimal.  If this region coincides with the stationary points of the dynamics, then all trajectories must converge to a stationary point.
 
-In this paper, we are interested in obtaining Lyapunov functions for dynamical systems designed for optimization.  Specifically, we are  interested in the~\emph{rate of convergence} of a method, not simply convergence alone.  To facilitate such rate analysis, we study time dependent Lyapunov functions.  We emphasize that Lyapunov analysis is the most standard technique to prove the convergence of optimization methods.   Standard proofs of gradient descent, mirror descent, subgradient descent, and Newton's method can all be analyzed by exhibiting some function which decreases at every iteration of the algorithm. The most common Lyapunov functions are the optimality gap $f(x)-f(x^\ast)$ or the distance to the optimal solution $D_h(x^\ast,x)$.  The main contribution of this paper is to demonstrate that most of the common momentum methods can be analyzed in a very similar framework.
- 
- 
+In this paper, we are interested in obtaining Lyapunov functions for dynamical systems designed for optimization.  In the optimization setting, we are typically interested in the~\emph{rate of convergence} of a method, not mere convergence.  To facilitate such rate analysis, we study time-dependent Lyapunov functions.  We emphasize that Lyapunov analysis is the most standard technique to prove the convergence of optimization methods.   Standard proofs of gradient descent, mirror descent, subgradient descent, and Newton's method can all be analyzed by exhibiting some function which decreases at every iteration of the algorithm. The most common Lyapunov functions are the optimality gap $f(x)-f(x^\ast)$ or the distance to the optimal solution $D_h(x^\ast,x)$.  The main contribution of this paper is to demonstrate that most of the common momentum methods can be analyzed in a very similar framework.
  
 
 We now introduce a simple family of time varying Lyapunov functions that can verify the convergence of momentum flows.
